# Bachelor-Thesis

./: .gitignore  .travis.yml  CMakeLists.txt  NetworkDefines.hpp  Nurn.cpp  Nurn.hpp  Nurn.sln  Nurn.vcxproj  Nurn.vcxproj.filters
CMake/Modules/: create_source_group.cmake
Nurn/: Address.cpp  Address.hpp  Main.cpp  NetworkDefines.hpp  Nurn.cpp  Nurn.hpp  Nurn.vcxproj  Nurn.vcxproj.filters  TCPCommunication.cpp  UDPCommunication.cpp  makefile
cpp/: Main.cpp  Nurn.cpp  TCPCommunication.cpp  TCPSocket.cpp
hpp/: Address.hpp  Communication.hpp  Socket.hpp  TCPSocket.hpp
